name:                jace
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/jace#readme
license:             BSD3
license-file:        LICENSE
author:              Andre Medeiros
maintainer:          example@example.com
copyright:           2016 Andre Medeiros
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Lexer
                     , Parser
                     , Validator
                     , Transformer
                     , Writer
                     , ASTUtils
  build-depends:       base >= 4.7 && < 5
                     , text
                     , parsec
                     , containers
  default-language:    Haskell2010

executable jace-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , jace
  default-language:    Haskell2010

test-suite jace-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jace
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/staltz/jace
